Fix bug with graph overlapping over a label. Closing #25

--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -267,3 +267,7 @@ html, body
 .form-container {
     max-width: 600px;
 }
+.graph-label {
+    position: relative;
+    z-index: 3;
+}
